tests/errors/pat_variant_fun_without_payload_err/pat_variant_fun_without_payload_err.c
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:13:5 Type mismatch: 'option<{?157}@pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:13:5>' <> 'string -> option<string>'.
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:13:5 Variant with payload must be used in the form of: `Variant pattern`.
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:17:5 Type mismatch: 'IntWrapper' <> 'int -> IntWrapper'.
#error pat_variant_fun_without_payload_err.pat_variant_fun_without_payload_err:17:5 Variant with payload must be used in the form of: `Variant pattern`.
